Min Widths on the feature widget bgImage to prevent massive gaps underneath

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -712,6 +712,7 @@ footer section.footer2 .widget.responsivecolumns p {
 .widget.feature .bgimage
 {
   height: 315px;
+  min-width:960px;
 }
 
 .widget.feature .content {
@@ -1297,6 +1298,7 @@ footer section.footer2 .widget.responsivecolumns p {
 
   .widget.feature .bgImage {
     height:235px;
+    min-width:800px;
   }
 
   .widget.feature .content .strip {
@@ -1427,6 +1429,7 @@ footer section.footer2 .widget.responsivecolumns p {
 
   .widget.feature .bgImage {
     height:100px;
+    min-width:500px;
   }
 
   .widget.feature .content .strip {
